--- a/package.json
+++ b/package.json
@@ -8,12 +8,22 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.12",
+    "@tanstack/react-query-devtools": "^5.91.1",
+    "@tanstack/react-query-next-experimental": "^5.91.0",
+    "axios": "^1.13.2",
+    "crypto-js": "^4.2.0",
+    "formik": "^2.4.9",
     "next": "16.0.6",
+    "next-auth": "^4.24.13",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-icons": "^5.5.0"
+    "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
