--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "16.0.6",
     "next-auth": "^4.24.13",
     "react": "19.2.0",
+    "react-datepicker": "^9.0.0",
     "react-dom": "19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
