--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "19.2.3",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-infinite-scroll-component": "^6.1.1",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "sass": "^1.97.2",
