--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.13.2",
     "crypto-js": "^4.2.0",
     "formik": "^2.4.9",
+    "lucide-react": "^0.562.0",
     "next": "^16.0.10",
     "next-auth": "^4.24.13",
     "next-cloudinary": "^6.17.5",
