--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "next": "^16.0.10",
     "next-auth": "^4.24.13",
     "next-cloudinary": "^6.17.5",
+    "plyr": "^3.8.4",
+    "plyr-react": "^6.0.0",
     "react": "19.2.3",
     "react-datepicker": "^9.1.0",
     "react-dom": "19.2.3",
