--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "crypto-js": "^4.2.0",
     "emoji-picker-react": "^4.17.3",
     "formik": "^2.4.9",
+    "i18n-iso-countries": "^7.14.0",
     "lucide-react": "^0.562.0",
     "next": "^16.0.10",
     "next-auth": "^4.24.13",
