--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "19.2.3",
     "react-datepicker": "^9.1.0",
     "react-dom": "19.2.3",
+    "react-google-recaptcha": "^3.1.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-infinite-scroll-component": "^6.1.1",
@@ -41,6 +42,7 @@
     "@types/node": "^25",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-google-recaptcha": "^2.1.9",
     "babel-plugin-react-compiler": "1.0.0",
     "typescript": "^5"
   }
