--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-infinite-scroll-component": "^6.1.1",
+    "react-photo-view": "^1.2.7",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "sass": "^1.97.2",
