--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "19.2.3",
     "react-datepicker": "^9.1.0",
     "react-dom": "19.2.3",
+    "react-easy-crop": "^5.5.6",
     "react-google-recaptcha": "^3.1.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
