--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "redux-persist": "^6.0.0",
     "sass": "^1.97.2",
     "socket.io-client": "^4.8.3",
+    "sweetalert2": "^11.26.19",
     "swiper": "^12.0.3",
     "yup": "^1.7.1"
   },
