--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@tanstack/react-query-devtools": "^5.91.1",
     "@tanstack/react-query-next-experimental": "^5.91.0",
     "axios": "^1.13.2",
+    "credit-card-type": "^10.1.2",
+    "credit-card-ui-react": "^0.2.0",
     "crypto-js": "^4.2.0",
     "emoji-picker-react": "^4.17.3",
     "formik": "^2.4.9",
@@ -25,6 +27,7 @@
     "plyr": "^3.8.4",
     "plyr-react": "^6.0.0",
     "react": "19.2.3",
+    "react-credit-cards-2": "^1.2.0",
     "react-datepicker": "^9.1.0",
     "react-dom": "19.2.3",
     "react-easy-crop": "^5.5.6",
