--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "19.2.3",
     "react-easy-crop": "^5.5.6",
     "react-google-recaptcha": "^3.1.0",
+    "react-h5-audio-player": "^3.10.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-infinite-scroll-component": "^6.1.1",
